shapeshift confirm controller implemented, amount fixes and shift view

--- a/src/pages/integrations/shapeshift/shapeshift-shift/shapeshift-shift.scss
+++ b/src/pages/integrations/shapeshift/shapeshift-shift/shapeshift-shift.scss
@@ -1,3 +1,23 @@
 page-shapeshift-shift {
-  
+  .wallet-selector {
+    ion-label {
+      display: flex;
+      align-items: center;
+    }
+    .wallet-balance {
+      margin-left: 1.5rem;
+    }
+  }
+  .buttons-container {
+      position: absolute;
+      bottom: 5vh;
+      width: 100%;
+      button {
+        width: 85%;
+        max-width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+      }
+    }
 }
